[package]
name = "subtractesizer"
version = "0.1.0"
edition = "2018"

[lib]
name = "subtractesizer"
crate-type = ["cdylib"]

[dependencies]
rb = { git = "https://github.com/jamieb133/rb" }
rand = "0.7.3"
itertools = "0.9.0"
more-asserts = { git = "https://github.com/thomcc/rust-more-asserts.git"}

[dependencies.pyo3]
version = "0.9.2"
features = ["extension-module"]
